[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"
include = [ "src/nebula/images/*", "src/nebula/Images_readme/*", "src/nebula/command_search_index/*", "src/nebula/config/*",]

[tool.poetry]
name = "nebula-ai"
version = "2.0.0b29"
description = "AI-Powered Ethical Hacking Assistant"
readme = "README.md"
authors = [ "David I <david@berylliumsec.com>",]
license = "BSD"
homepage = "https://github.com/berylliumsec/nebula"
keywords = [ "AI", "ethical hacking", "nmap", "zap", "crackmapexec",]
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "License :: OSI Approved :: BSD License", "Programming Language :: Python :: 3",]
include = [ "src/nebula/images/*",]
[[tool.poetry.packages]]
include = "nebula"
from = "src"

[tool.poetry.scripts]
nebula = "nebula.nebula:main"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13.9"
Cython = "*"
IPython = ">=8,<9"
PyQt6 = "*"
boto3 = "*"
opencv-python = "*"
Faker = "*"
numpy = ">=2.1,<3"
prompt_toolkit = "*"
psutil = "*"
Pygments = "*"
requests = "*"
tiktoken = "*"
torch = ">=2.8.0,<3"
transformers = ">=4.53.0,<5"
websockets = "*"
Whoosh = "*"
fastapi = ">=0.135.3,<1"
uvicorn = "*"
pydantic = "*"
langchain = ">=1.2.15,<2"
regex = "*"
typing-extensions = "*"
langchain-community = ">=0.4,<1"
langchain-core = ">=1.2.22,<2"
accelerate = "*"
duckduckgo-search = "*"
toml = "*"
setuptools = ">=78.1.1"
langchain-experimental = ">=0.4,<1"
ollama = "*"
langchain_ollama = ">=1.0.1,<2"
langchain_openai = ">=1.1.12,<2"
langchain-huggingface = ">=1.2.1,<2"
sentence-transformers = "*"
chromadb = "*"
langchain_chroma = ">=1.1.0,<2"
unstructured = ">=0.17,<0.21"
jq = "*"
qdarkstyle = "*"
pexpect = "^4.9.0"
langchain-classic = ">=1.0.3,<2"
ddgs = ">=9.13.0,<10"
h5py = ">=3.16.0,<4"
spacy = ">=3.8.14,<4"
thinc = ">=8.3.13,<9"

[tool.poetry.extras]
flash = [ "flash-attn",]

[tool.pytest.ini_options]
testpaths = [ "tests",]

[tool.coverage.run]
source = [ "src/nebula",]

[tool.coverage.report]
fail_under = 100
show_missing = true
