[package]
name = "nebula-ui"
version = "3.0.0-alpha.1"
description = "Nebula 3 local-first security workspace"
authors = ["Nebula contributors"]
edition = "2024"
rust-version = "1.85"

[lib]
name = "nebula_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
base64 = "0.22.1"
getrandom = "0.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.11.5", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
