[package]
name = "nebula-ui"
version = "3.0.0-alpha.1"
description = "Nebula 3 local-first security workspace"
authors = ["Nebula contributors"]
edition = "2024"
rust-version = "1.85"

[lib]
name = "nebula_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
direct-updater = ["dep:tauri-plugin-updater"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
base64 = "0.22.1"
getrandom = "0.4.1"
minisign-verify = "0.2.5"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-updater = { version = "2.10.1", optional = true }
time = { version = "0.3.45", features = ["formatting"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.177"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
