[package]
name = "nebula-ui"
version = "3.0.0-alpha.5"
description = "Nebula 3 local-first security workspace"
authors = ["Nebula contributors"]
edition = "2024"
rust-version = "1.85"

[lib]
name = "nebula_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
direct-updater = ["dep:tauri-plugin-updater"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
getrandom = "0.4.1"
minisign-verify = "0.2.5"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tauri = { version = "2.11.5", features = ["unstable"] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-updater = { version = "2.10.1", optional = true }
time = { version = "0.3.45", features = ["formatting", "parsing"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["sync-secret-service"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSResponder", "NSView", "objc2-quartz-core"] }
objc2-foundation = { version = "0.3.2", features = ["NSGeometry", "NSProcessInfo"] }
objc2-quartz-core = { version = "0.3.2", default-features = false, features = ["CALayer"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.177"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
